# ShapeDistanceAnalyzer

./: .gitignore  CMakeLists.txt  LinearSubdivision  LinearSubdivisionFilter.py  ShapeDistanceAnalyzer.py  ShapeStatistics  ShapeStatistics.py  ShapeStatistics.xml  ShapeStats.py  shapestatistics  test.py
CLI/linearSubdivision/: LinearSubdivision.xml
CLI/linearSubdivision/app/: CMakeLists.txt
CLI/linearSubdivision/lib/: vtkLinearSubdivisionFilter2.cxx  vtkLinearSubdivisionFilter2.h
Resources/Tests/: File_A.vtk  TestValues.csv  test.py
Resources/UI/: ShapeDistanceAnalyzer.ui  ShapeStats.ui
ShapeDistanceAnalyzer/: CMakeLists.txt  ShapeDistanceAnalyzer.py  ShapeStatistics.py  ShapeStatistics.xml
ShapeDistanceAnalyzer/Resources/LinearSubdivisionFilter/: LinearSubdivisionFilter.py
ShapeDistanceAnalyzer/Resources/Tests/: File_B.vtk  TestValues.csv  test.py
